Have create and read functions working for 'articles'

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_with scope: :article, url: articles_path, local: true do |form| %>
   <p>
     <%= form.label :title %>
-    <%= form.text_field :text_field %><br>
+    <%= form.text_field :title %><br>
   </p>
 
   <p>
